# GCJourney

./: .gitignore  README.md
0-CreatingAWindow/: main.c  run.sh
1-MakingTheWindowResizable/: main.c
2-RenderATriangle/: CMakeLists.txt  Vec3.c  main.c  shader_translator.c  window_manager.c
2-RenderATriangle/include/: event_handler.h  shader_translator.h
2-RenderATriangle/shaders/: fragment.glsl
3-RealTimeShaderUpdate/: main.c
3-RealTimeShaderUpdate/include/: Vec3.h
4-ElementBufferObject/: CMakeLists.txt  event_handler.c  main.c  shader_translator.c
4-ElementBufferObject/include/: shader_translator.h  window_manager.h
4-ElementBufferObject/shaders/: fragment.glsl
